--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = ["Jakub Hejhal <kubic71@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3"
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+ipython = "*"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
