--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.6"
 [tool.poetry.dev-dependencies]
 ipython = "*"
 mypy = "^0.910"
+rope = "^0.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
